Fix text alignment

--- a/style.css
+++ b/style.css
@@ -24,10 +24,17 @@
 .custom-navbar{
 	background-color: #151d2e;
 }
-.custom-navbar .navbar-nav .nav-link{
+.custom-navbar .navbar-nav .nav-link {
 	color: #fff;
-	padding-left: 30px;
-	padding-right: 30px;
+	padding-left: 0;
+	padding-right: 0;
+}
+@media (min-width: 992px) {
+	.custom-navbar .navbar-nav .nav-link {
+		color: #fff;
+		padding-left: 30px;
+		padding-right: 30px;
+	}
 }
 .custom-navbar .navbar-nav .nav-link:hover {
 	color: #f9b707
@@ -122,14 +129,23 @@
 .section-2-content{
 	background-color: #f1f1f1;
 }
-.custom-card{
+.custom-card {
 	-moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 
 	background-color: rgba(0.30, 0.30, 0.30, 0.16);
 	border: none;
+	margin-bottom: 20px;
 }
+
+
+@media (min-width: 992px) {
+	.custom-card {
+		margin-bottom: 0;
+	}
+}
+
 .section2-overlay {
 	padding: 35px;
 }
@@ -189,6 +205,12 @@
 .sec4-title a:hover{
 	text-decoration: none;
 	color: #f9b707;
+}
+
+@media (min-width: 992px) {
+	.section-4-left-col {
+		text-align: right;
+	}
 }
 
 /*section-6*/
